--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                         <!-- INFORMAÇÕES PESSOAIS -->
                         <div class="coluna coluna-direita">
 
-                            <h1>Adilson Barreto.</h1>   
-                            <p>Cursando: HTML 5, CSS 3, Java Script - Danki Code.</p>
+                            <h1>Adilson Sena.</h1>   
+                            <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
                             <p>Cursando Técnologias em Jogos Digitais - Universidade Nove de Julho.</p> 
-                            <p>Aprendendo nas lives da Kenzie Academy Brasil: HTML 5, CSS 3, Java Script, Python e Django.</p>
+                            <p>Aprendendo nas aulas da Digital House: HTML 5, CSS 3, Java Script.</p>
                             <ul>
                                 <li>
                                     <a href="mailto:exemplo@gmail.com">sejaassociado@gmail.com</a>
@@ -72,15 +72,15 @@
                             <section>
                                 <span class="topo-direita"></span>
                                 <h2>Perfil Profissional</h2>
-                                <p>Cursando: HTML 5, CSS 3, Java Script - Danki Code.</p>
+                                <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
                                 <p>Cursando Técnologias em Jogos Digitais - Universidade Nove de Julho.</p>     
-                                <p>Aprendendo nas lives da Kenzie Academy Brasil: HTML 5, CSS 3, Java Script, Python e Django.</p>
+                                <p>Aprendendo nas aulas da Digital House: HTML 5, CSS 3, Java Script.</p>
                                 <span class="baixo-esquerda"></span>
                             </section>
 
                             <section>
                                 <span class="topo-direita"></span>
-                                <h2>Habilidades</h2>
+                                <h2>Desenvolvendo Habilidades</h2>
                                 <ul>
                                     <li>HTML 5</li>
                                     <li>CSS 3</li>
@@ -93,9 +93,9 @@
                                 <span class="topo-direita"></span>
                                 <h2>Cursando</h2>
                                 <ul>
-                                    <li>HTML 5 - Dankicode </li>
-                                    <li>CSS 3 - Dankicode</li>
-                                    <li>Javascript - Dankicode</li>
+                                    <li>HTML 5 - Digital House </li>
+                                    <li>CSS 3 - Digital House</li>
+                                    <li>Javascript - Digital House</li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
                             </section>
@@ -133,16 +133,16 @@
                                 <h2>Formação</h2>
                                 <ul>
                                     <li>
-                                        <h3>Cursando Técnologias em Jogos Digitais<strong>    01/03/2019 - cursando</strong></h3>
+                                        <h3>Cursando Técnologia em Jogos Digitais<strong>    01/03/2019 - cursando</strong></h3>
                                         <p>Universidade Nove de Julho</p>
                                     </li>
                                     <li>
                                         <h3>Cursando: HTML 5, CSS 3, Java Script.<strong>    01/02/2021 - cursando</strong></h3>
-                                        <p>Danki Code</p>
+                                        <p>Digital House</p>
                                     </li>
                                     <li>
-                                        <h3>Cursando as lives da Kenzie: HTML 5, CSS 3, Java Script, Python e Django.<strong> Referência</strong></h3>
-                                        <p>Kenzie Academy Brasil</p>
+                                        <h3>Cursando na Digital House: HTML 5, CSS 3, Java Script.<strong> Referência</strong></h3>
+                                        <p>Digital House Brasil</p>
                                     </li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
@@ -175,13 +175,13 @@
                     <nav>
                         <ul class="redes-sociais">
                             <li>
-                                <a href="#">
+                                <a href="#"><strong>Adilsonsena.github.io</strong></a>
                                     <img src="./assets/img/linkedin.svg" alt="Linkedin">
                                     <p>Linkedin</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#"><strong>https://github.com/AdilsonSena</strong></a>
                                     <img src="./assets/img/github-big-logo.svg" alt="Github">
                                     <p>Github</p>
                                 </a>
