--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h1>Adilson Sena.</h1>   
                             <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
                             <p>Cursando Técnologias em Jogos Digitais - Universidade Nove de Julho.</p> 
-                            <p>Aprendendo nas aulas da Digital House: HTML 5, CSS 3, Java Script.</p>
+                            <p>Aprendendo nas aulas da Digital House: Node.JS</p>
                             <ul>
                                 <li>
                                     <a href="mailto:exemplo@gmail.com">sejaassociado@gmail.com</a>
@@ -74,7 +74,7 @@
                                 <h2>Perfil Profissional</h2>
                                 <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
                                 <p>Cursando Técnologias em Jogos Digitais - Universidade Nove de Julho.</p>     
-                                <p>Aprendendo nas aulas da Digital House: HTML 5, CSS 3, Java Script.</p>
+                                <p>Aprendendo nas aulas da Digital House: Node.JS</p>
                                 <span class="baixo-esquerda"></span>
                             </section>
 
