--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                             <h1>Adilson Sena.</h1>   
                             <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
-                            <p>Cursando Técnologias em Jogos Digitais - Universidade Nove de Julho.</p> 
+                            <p>Cursando Técnologia em Jogos Digitais - Universidade Nove de Julho.</p> 
                             <p>Aprendendo nas aulas da Digital House: Node.JS</p>
                             <ul>
                                 <li>
