--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <span class="topo-direita"></span>
                                 <h2>Perfil Profissional</h2>
                                 <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
-                                <p>Cursando Técnologias em Jogos Digitais - Universidade Nove de Julho.</p>     
+                                <p>Cursando Técnologia em Jogos Digitais - Universidade Nove de Julho.</p>     
                                 <p>Aprendendo nas aulas da Digital House: Node.JS</p>
                                 <span class="baixo-esquerda"></span>
                             </section>
