--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <nav>
                         <ul class="redes-sociais">
                             <li>
-                                <a href="#"><strong>Adilsonsena.github.io</strong></a>
+                                <a href="#"><strong>https://www.linkedin.com/in/adilsonbarreto/</strong></a>
                                     <img src="./assets/img/linkedin.svg" alt="Linkedin">
                                     <p>Linkedin</p>
                                 </a>
