--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><strong>https://github.com/AdilsonSena</strong></a>
+                                <a href="#"><strong>https://adilsonsena.github.io</strong></a>
                                     <img src="./assets/img/github-big-logo.svg" alt="Github">
                                     <p>Github</p>
                                 </a>
