--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
                         <div class="coluna coluna-direita">
 
                             <h1>Adilson Sena.</h1>   
-                            <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
-                            <p>Cursando Técnologia em Jogos Digitais - Universidade Nove de Julho.</p> 
-                            <p>Aprendendo nas aulas da Digital House: Node.JS</p>
+                            <p>Full Stack Developer JavaScript - Node.js.</p>
+                            <p>Técnologia em Jogos Digitais.</p> 
+                            <p></p>
                             <ul>
                                 <li>
                                     <a href="mailto:exemplo@gmail.com">sejaassociado@gmail.com</a>
                                 </li>
                                 <li>
-                                    <a href="tel:5511981355496">55 (11) 9 8135-5496</a>
+                                    <a href="tel:5511981355496">55 (11) 9 3938-2158</a>
                                 </li>
                                 <li>
                                     <a href="#">São Paulo - Capital</a>
@@ -72,9 +72,9 @@
                             <section>
                                 <span class="topo-direita"></span>
                                 <h2>Perfil Profissional</h2>
-                                <p>Cursando: HTML 5, CSS 3, Java Script - Digital House.</p>
-                                <p>Cursando Técnologia em Jogos Digitais - Universidade Nove de Julho.</p>     
-                                <p>Aprendendo nas aulas da Digital House: Node.JS</p>
+                                <p>Full Stack Developer JavaScript - Node.js.</p>
+                                <p>Técnologia em Jogos Digitais.</p>     
+                                <p></p>
                                 <span class="baixo-esquerda"></span>
                             </section>
 
@@ -85,17 +85,19 @@
                                     <li>HTML 5</li>
                                     <li>CSS 3</li>
                                     <li>Java Script</li>
+                                    <li>Node.js</li>
+                                    <li>React.js</li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
                             </section>
 
                             <section>
                                 <span class="topo-direita"></span>
-                                <h2>Cursando</h2>
+                                <h2>Certificados:</h2>
                                 <ul>
-                                    <li>HTML 5 - Digital House </li>
-                                    <li>CSS 3 - Digital House</li>
-                                    <li>Javascript - Digital House</li>
+                                    <li>Web Full Stack - Digital House </li>
+                                    <li>Técnologias em Jogos Digitais - Uni9</li>
+                                    <li></li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
                             </section>
@@ -110,18 +112,18 @@
                                 <h2>Experiências</h2>
                                 <ul>
                                     <li>
-                                        <h3>Cursando: HTML 5, CSS 3, Java Script.</h3>
-                                        <strong>Nome da empresa: Cursando HTML 5, CSS 3, Java Script. - Tempo integral</strong>
+                                        <h3>Curso concluído: Web Full Stack - Digital House.</h3>
+                                        <strong>Nome da empresa: Curso concluído: Web Full Stack - Digital House. - Tempo integral</strong>
                                         <p>Período empregado de... à ... . Localidade São Paulo, Capital</p>
                                     </li>
                                     <li>
-                                        <h3>Cursando: HTML 5, CSS 3, Java Script.</h3>
-                                        <strong>Nome da empresa: Cursando HTML 5, CSS 3, Java Script. - Tempo integral</strong>
+                                        <h3>Técnologias em Jogos Digitais - Uni9.</h3>
+                                        <strong>Técnologias em Jogos Digitais - Uni9. - Tempo integral</strong>
                                         <p>Período empregado de... à ... . Localidade São Paulo, Capital</p>
                                     </li>
                                     <li>
-                                        <h3>Cursando: HTML 5, CSS 3, Java Script.</h3>
-                                        <strong>Nome da empresa: Cursando HTML 5, CSS 3, Java Script. - Tempo integral</strong>
+                                        <h3>Curso concluído: Web Full Stack - Node.js - Digital House.</h3>
+                                        <strong>Nome da empresa: Concluído: HTML 5, CSS 3, JavaScript (Node.js). - Tempo integral</strong>
                                         <p>Período empregado de... à ... . Localidade São Paulo, Capital</p>
                                     </li>
                                 </ul>
@@ -133,15 +135,15 @@
                                 <h2>Formação</h2>
                                 <ul>
                                     <li>
-                                        <h3>Cursando Técnologia em Jogos Digitais<strong>    01/03/2019 - cursando</strong></h3>
+                                        <h3>Técnologia em Jogos Digitais<strong>    01/02/2019 - 10/12/2021</strong></h3>
                                         <p>Universidade Nove de Julho</p>
                                     </li>
                                     <li>
-                                        <h3>Cursando: HTML 5, CSS 3, Java Script.<strong>    01/02/2021 - cursando</strong></h3>
+                                        <h3>Web Full Stack - Node.js - Digital House.<strong>    21/10/2021 - 30/05/2022</strong></h3>
                                         <p>Digital House</p>
                                     </li>
                                     <li>
-                                        <h3>Cursando na Digital House: HTML 5, CSS 3, Java Script.<strong> Referência</strong></h3>
+                                        <h3>Digital House: HTML 5, CSS 3, Java Script, Node.js.<strong> Referência</strong></h3>
                                         <p>Digital House Brasil</p>
                                     </li>
                                 </ul>
