--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                                     <li>Java Script</li>
                                     <li>Node.js</li>
                                     <li>React.js</li>
+                                    <li>Docker</li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
                             </section>
