Feat: consertando footer quebrado...

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfólio</title
-            
+        <title>Portfólio</title>
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
@@ -31,21 +31,27 @@
                         </div>
                         <!-- INFORMAÇÕES PESSOAIS -->
                         <div class="coluna coluna-direita">
-                            <h1>Adilson Sena.</h1>   
-                            <p>Full Stack Developer JavaScript - Node.js.</p>
-                            <p>Técnologia em Jogos Digitais.</p> 
-                            <p></p>
-                            <ul>
-                                <li>
-                                    <a href="mailto:exemplo@gmail.com">sejaassociado@gmail.com</a>
-                                </li>
-                                <li>
-                                    <a href="tel:5511981355496">55 (11) 9 3938-2158</a>
-                                </li>
-                                <li>
-                                    <a href="#">São Paulo - Capital</a>
-                                </li>
-                            </ul>
+                            <strong>
+                                <h1>⭐Adilson Sena.⭐</h1> <br/>
+                                <p>⭐⭐⭐<a href="https://github.com/AdilsonSena">Github Repositório</a>⭐⭐⭐</p> <br/>  
+                                <p>Full Stack Developer JavaScript - Node.js.</p>
+                                <p>Programação Orientada a Objetos (POO) com Python</p>
+                                <p>Ciências de Dados com Python</p>
+                                <p>Fundamentos de ETL (Extract, Transform, Load) com Python</p>
+                                <p>Arquitetura de Banco de Dados</p>
+                                <p>Técnologia em Jogos Digitais.</p> 
+                                <ul>
+                                    <li>
+                                        <a href="mailto:exemplo@gmail.com">sejaassociado@gmail.com</a>
+                                    </li>
+                                    <li>
+                                        <a href="tel:5511981355496">55 (11) 9 8135-5496</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">São Paulo - Capital</a>
+                                    </li>
+                                </ul>
+                            </strong>
                         </div>
                     </div>
                 </div>
@@ -60,7 +66,7 @@
                                 <h2>Perfil Profissional</h2>
                                 <p>Full Stack Developer JavaScript - Node.js.</p>
                                 <p>Técnologia em Jogos Digitais.</p>     
-                                <p></p>
+                                <p>Arquitetura de Banco de Dados</p>
                                 <span class="baixo-esquerda"></span>
                             </section>
                             <section>
@@ -69,10 +75,10 @@
                                 <ul>
                                     <li>HTML 5</li>
                                     <li>CSS 3</li>
-                                    <li>Java Script</li>
+                                    <li>JavaScript</li>
                                     <li>Node.js</li>
-                                    <li>React.js</li>
-                                    <li>Docker</li>
+                                    <li>Python</li>
+                                    <li>Mysql</li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
                             </section>
@@ -82,7 +88,10 @@
                                 <ul>
                                     <li>Web Full Stack - Digital House </li>
                                     <li>Técnologias em Jogos Digitais - Uni9</li>
-                                    <li></li>
+                                    <li>Fundamentos de ETL (Extract, Transform, Load) com Python  - DIO</li>
+                                    <li>Análise de dados com Python e Pandas  - DIO</li>
+                                    <li>Git e GitHub Focado em PullRequest  - DIO</li>
+                                    <li>Arquitetura de Banco de Dados  - DIO</li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
                             </section>
@@ -95,18 +104,18 @@
                                 <ul>
                                     <li>
                                         <h3>Curso concluído: Web Full Stack - Digital House.</h3>
-                                        <strong>Nome da empresa: Curso concluído: Web Full Stack - Digital House. - Tempo integral</strong>
-                                        <p>Período empregado de... à ... . Localidade São Paulo, Capital</p>
+                                        <strong><!-- Nome da empresa: Curso concluído: Web Full Stack - Digital House.--> - Tempo integral</strong>
+                                        <p><!--Período empregado de... à ... .--> Localidade São Paulo, Capital</p>
                                     </li>
                                     <li>
                                         <h3>Técnologias em Jogos Digitais - Uni9.</h3>
-                                        <strong>Técnologias em Jogos Digitais - Uni9. - Tempo integral</strong>
-                                        <p>Período empregado de... à ... . Localidade São Paulo, Capital</p>
+                                        <strong><!--Técnologias em Jogos Digitais - Uni9. - -->Tempo integral</strong>
+                                        <p><!--Período empregado de... à ... . Localidade São Paulo, Capital--></p>
                                     </li>
                                     <li>
-                                        <h3>Curso concluído: Web Full Stack - Node.js - Digital House.</h3>
-                                        <strong>Nome da empresa: Concluído: HTML 5, CSS 3, JavaScript (Node.js). - Tempo integral</strong>
-                                        <p>Período empregado de... à ... . Localidade São Paulo, Capital</p>
+                                        <h3>Curso concluído: Análise de dados com Python e Pandas  - DIO.</h3>
+                                        <strong><!--Nome da empresa: Concluído: HTML 5, CSS 3, JavaScript (Node.js). - -->Tempo integral</strong>
+                                        <p><!--Período empregado de... à ... . Localidade São Paulo, Capital--></p>
                                     </li>
                                 </ul>
                                 <span class="baixo-esquerda"></span>
@@ -142,41 +151,41 @@
                                 <a href="mailto:exemplo@gmail.com"><strong>E-mail:</strong> sejaassociado@gmail.com</a>
                             </li>
                             <li>
-                                <a href="tel"><strong>Telefone:</strong> 55 (11) 9 8135-5496</a>
+                                <a href="https://www.whatsapp.com/?lang=pt_br"><strong>Telefone:</strong> 55 (11) 9 8135-5496</a>
                             </li>
                             <li>
-                                <a href="#"><strong>Endereço:</strong> São Paulo - Capital</a>
+                                <a href="https://www.google.com.br/maps/@-23.7261086,-46.6801928,15z?hl=pt-BR"><strong>Endereço:</strong> São Paulo - Capital</a>
                             </li>
                         </ul>
                     </nav> 
                     <nav>
                         <ul class="redes-sociais">
                             <li>
-                                <a href="#"><strong>https://www.linkedin.com/in/adilsonbarreto/</strong></a>
+                                <a href="https://www.linkedin.com/in/adilsonsena/">
                                     <img src="./assets/img/linkedin.svg" alt="Linkedin">
                                     <p>Linkedin</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><strong>https://adilsonsena.github.io</strong></a>
+                                <a href="https://adilsonsena.github.io">
                                     <img src="./assets/img/github-big-logo.svg" alt="Github">
                                     <p>Github</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.instagram.com/">
                                     <img src="./assets/img/instagram.svg" alt="Instagram">
                                     <p>Instagram</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://www.youtube.com/">
                                     <img src="./assets/img/youtube.svg" alt="Youtube">
                                     <p>Youtube</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="https://pt-br.facebook.com/">
                                     <img src="./assets/img/facebook-app-symbol.svg" alt="Facebook">
                                     <p>Facebook</p>
                                 </a>
